--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<ngx-paypal [config]="payPalConfig"></ngx-paypal>
+<!--<ngx-paypal [config]="payPalConfig"></ngx-paypal>-->
+<router-outlet></router-outlet>
