--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,5 +1,5 @@
 <div>
-
+  <Button text="navigateBack" (click)="navigateBack()">Navigate Back</Button>
   <div>
     <h1>Favourites tracks</h1>
   </div>
